Erro de grafia no texto

--- a/exercicio.html/primeiroExercicio.html
+++ b/exercicio.html/primeiroExercicio.html
@@ -20,7 +20,7 @@
 
     <hr>
     <h3><i>Onde quero chegar:</i></h3>
-        <p>Montar um startap, trabalhar com inteligência artificial. Por isso faço duas faculdades e quero o mais rápido possivel começar a trabalhar com programação, visto que já vivo isso diáriamente com meus estudos, o Programa Starter pela <a href="https://www.growdev.com.br/" target="_blanc">Growdev</a>, quarta edição, programa no formato bootcamp para a formação de Desenvolvedores Web Full Stack, é uma das formas que encontrei de me colocar no mercado de trabalho, no que depender de mim vou me esforçar ao máximo para isso.</p>
+        <p>Montar um startup, trabalhar com inteligência artificial. Por isso faço duas faculdades e quero o mais rápido possivel começar a trabalhar com programação, visto que já vivo isso diáriamente com meus estudos, o Programa Starter pela <a href="https://www.growdev.com.br/" target="_blanc">Growdev</a>, quarta edição, programa no formato bootcamp para a formação de Desenvolvedores Web Full Stack, é uma das formas que encontrei de me colocar no mercado de trabalho, no que depender de mim vou me esforçar ao máximo para isso.</p>
     <hr> <hr>
 </body>
 </html>
